--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
+    "csv-parse": "^1.2.0",
+    "csv-parser": "^1.11.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "fs": "0.0.1-security",
+    "http": "0.0.0",
     "join": "^3.0.0",
     "mongodb": "^2.2.20",
     "mongoose": "^4.7.6",
-    "path": "^0.12.7"
+    "mongoose-double": "0.0.1",
+    "path": "^0.12.7",
+    "should": "^11.2.1"
   }
 }
